# cpp-practice

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  readme.md  utils.sh
feature/: CMakeLists.txt
feature/caller/: caller.hpp  caller_test.cpp
feature/cast/: universal_cast.hpp  universal_cast_test.cpp
feature/cleaner/: cleaner.hpp  cleaner_test.cpp
feature/collection/: builder.hpp  builder_test.cpp
feature/fourier/: fourier.cpp
feature/hash/: hash_stream.hpp  hash_stream_test.cpp
feature/secure/: secure_allocator.hpp  secure_string.hpp
feature/singleton/: service_locator.hpp  service_locator_test.cpp  singleton.hpp  singleton_test.cpp
feature/storage/: storage.hpp  storage_test.cpp
leetcode/: 0001-two-sum.cpp  0002-add-two-numbers.cpp  0003-longest-substring-without-repeating-characters.cpp  0004-median-of-two-sorted-arrays.cpp
projects/: CMakeLists.txt
projects/cleaner/: cleaner.hpp  cleaner_test.cpp
projects/secure/: secure_string_test.cpp
projects/singleton/: singleton.hpp
quickstart/: cmake.md  conan.md  docker.md  git.md  ssh.md  vim.md
src/: singleton.hpp
test/: singleton_test.cpp
utils/: Dockerfile  bash_aliases.sh  bash_utils  utils.sh
